# translation-by-gcp

./: .gitignore  LICENSE  README.md  entry_points.cfg  setup.cfg
translation_gcp/: args.py  translate-android-values.py  translate-text.py  translate_android_values.py  translate_text.py
translation_gcp/lib/: translate.py
