[metadata]
name = translaton_gcp
version = 0.1
url = https://github.com/malta-yamato/translation-by-gcp
author = Yamato Malta
author_email = malta.yamato@gmail.com
license = MIT
description = translate file by using google translation API.
long_description = file: README.md

[options]
entry_points = file: entry_points.cfg
install_requires = google-cloud-translate
